--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "momnet": "^0.0.1-security",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
     "validator": "^13.15.15"
